<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginBottom="15dp"
    android:gravity="center_vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ImgLanguage"
        android:background="@drawable/border_radius"
        android:elevation="0dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_work"
        android:contentDescription="@string/img_prgm_langu"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginStart="-50dp"
        android:layout_height="125dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="-1dp"
        android:backgroundTint="@color/purple_200" >
        <LinearLayout
            android:id="@+id/conteiner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="58dp"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_nameLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_main_title"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/tv_nameLanguage"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:hint="@string/string_desription_log_text"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/tv_nameLanguage"
                    app:layout_constraintTop_toBottomOf="@id/tv_nameLanguage"
                    android:layout_marginTop="5dp"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbFavorite"
                    android:layout_width="24dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="10dp"
                    android:button="@drawable/cb_favorite"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_nameLanguage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_nameLanguage"
                    android:contentDescription="@string/string_button_llike" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="23dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_launcher_background"
                    android:contentDescription="@string/string_icon" />
                <TextView
                    android:id="@+id/tv_paradigma"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:hint="@string/string_summary_text"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="11sp" />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="23dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_launcher_background"
                    android:contentDescription="@string/string_icon" />
                <TextView
                    android:id="@+id/tv_useLanguage"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:hint="@string/string_summary_text"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="11sp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>