<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:elevation="30dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ViewLangFragment">
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <ImageButton
          android:id="@+id/imgb_back"
          android:layout_width="wrap_content"
          android:elevation="20dp"
          android:layout_margin="10dp"
          android:padding="5dp"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          android:background="@color/transparant"

          android:src="@drawable/ic_arrow_back"
          android:contentDescription="TODO" />
      <ImageView
          android:id="@+id/imgPoster"
          android:layout_width="match_parent"
          android:layout_height="250dp"
          android:scaleType="fitXY"

          android:adjustViewBounds="true"
          android:scaleX="1.2"
          android:scaleY="1.2"
          android:src="@drawable/ic_launcher_background"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:contentDescription="TODO" />
      <LinearLayout
          android:id="@+id/containerDescrip"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="-25dp"
          android:orientation="vertical"
          app:layout_constraintTop_toBottomOf="@+id/imgPoster">
          <ImageView
              android:id="@+id/imgLang"
              android:layout_width="110dp"
              android:layout_height="110dp"
              android:elevation="20dp"
              android:background="@drawable/border_radius"
              android:layout_gravity="center_horizontal"
              android:src="@drawable/ic_code_lang"
              android:contentDescription="TODO"/>
          <androidx.cardview.widget.CardView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:layout_marginTop="-60dp"
              android:backgroundTint="@color/red"
              app:cardCornerRadius="10dp"
              app:cardElevation="10dp">
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:gravity="center_horizontal"
                  android:paddingTop="60dp">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="Title"
                      android:textColor="@color/white"
                      android:textSize="24sp"
                      android:textStyle="bold"/>
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="Title description"
                      android:textColor="@color/white"
                      android:textSize="12sp"
                      android:textStyle="bold"/>
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:layout_marginBottom="10dp"
                      android:gravity="center_horizontal"
                      android:orientation="horizontal">
                      <ImageView
                          android:layout_width="20dp"
                          android:layout_height="23dp"
                          android:layout_marginStart="10dp"
                          android:src="@drawable/ic_year"
                          android:contentDescription="@string/string_icon" />
                      <TextView
                          android:id="@+id/tv_year"
                          android:layout_width="wrap_content"
                          android:textColor="@color/white"
                          android:layout_height="match_parent"
                          android:layout_marginStart="10dp"
                          android:hint="@string/string_summary_text"
                          android:maxLines="1"
                          android:gravity="center_vertical"
                          android:ellipsize="end"
                          android:textSize="11sp" />
                      <ImageView
                          android:layout_width="20dp"
                          android:layout_height="23dp"
                          android:layout_marginStart="10dp"
                          android:src="@drawable/ic_used"
                          android:contentDescription="@string/string_icon" />
                      <TextView
                          android:id="@+id/tv_useLanguage"
                          android:layout_width="wrap_content"
                          android:textColor="@color/white"
                          android:gravity="center_vertical"
                          android:layout_height="match_parent"
                          android:layout_marginStart="10dp"
                          android:hint="@string/string_summary_text"
                          android:maxLines="1"
                          android:ellipsize="end"
                          android:textSize="11sp" />
                  </LinearLayout>
              </LinearLayout>
          </androidx.cardview.widget.CardView>
      </LinearLayout>

<TextView
    android:id="@+id/tvDescription"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Descrition"
    android:textSize="20sp"
    android:textStyle="bold"
    android:layout_marginStart="16dp"
    android:layout_marginTop="20sp"
    app:layout_constraintTop_toBottomOf="@id/containerDescrip"/>
      <View
          android:id="@+id/vLine"
          android:layout_width="60dp"
          android:layout_height="1dp"
          app:layout_constraintStart_toStartOf="@id/tvDescription"
          android:background="#03A9F4"
          android:orientation="vertical"
          app:layout_constraintTop_toBottomOf="@id/tvDescription"/>
      <TextView
          android:id="@+id/tvInf"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/string_lorem_ipsum"
          android:textSize="20sp"
          android:textStyle="normal"
          android:layout_marginStart="16dp"
          android:layout_marginTop="20sp"
          app:layout_constraintTop_toBottomOf="@id/vLine"/>
      <ImageButton
          android:id="@+id/imgB_developer"
          android:layout_width="50dp"
          android:src="@drawable/ic_create_by"
          android:layout_height="50dp"
          android:background="@drawable/border_radius"
          app:layout_constraintTop_toBottomOf="@id/tvInf"
          app:layout_constraintStart_toStartOf="@id/tvInf"/>
      <TextView
          android:id="@+id/tvNamoDeveloper"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:hint="Name"
          android:textSize="15sp"
          android:textStyle="normal"
          android:layout_marginStart="12dp"
          app:layout_constraintBottom_toBottomOf="@+id/imgB_developer"
          app:layout_constraintStart_toEndOf="@+id/imgB_developer"
          app:layout_constraintTop_toTopOf="@+id/imgB_developer" />
  </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.core.widget.NestedScrollView>